--- a/src/styles.css
+++ b/src/styles.css
@@ -2,3 +2,117 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
+
+@layer base {
+  :root {
+    color-scheme: light dark;
+
+    --light-primary: 21 102 131;
+    --light-surface-tint: 21 102 131;
+    --light-on-primary: 255 255 255;
+    --light-primary-container: 192 232 255;
+    --light-on-primary-container: 0 31 43;
+    --light-secondary: 77 97 108;
+    --light-on-secondary: 255 255 255;
+    --light-secondary-container: 208 230 243;
+    --light-on-secondary-container: 8 30 39;
+    --light-tertiary: 94 90 125;
+    --light-on-tertiary: 255 255 255;
+    --light-tertiary-container: 228 223 255;
+    --light-on-tertiary-container: 27 23 54;
+    --light-error: 186 26 26;
+    --light-on-error: 255 255 255;
+    --light-error-container: 255 218 214;
+    --light-on-error-container: 65 0 2;
+    --light-background: 246 250 254;
+    --light-on-background: 23 28 31;
+    --light-surface: 246 250 254;
+    --light-on-surface: 23 28 31;
+    --light-surface-variant: 220 227 233;
+    --light-on-surface-variant: 64 72 76;
+    --light-outline: 112 120 125;
+    --light-outline-variant: 192 199 205;
+    --light-shadow: 0 0 0;
+    --light-scrim: 0 0 0;
+    --light-inverse-surface: 44 49 52;
+    --light-inverse-on-surface: 237 241 245;
+    --light-inverse-primary: 140 207 241;
+    --light-primary-fixed: 192 232 255;
+    --light-on-primary-fixed: 0 31 43;
+    --light-primary-fixed-dim: 140 207 241;
+    --light-on-primary-fixed-variant: 0 77 102;
+    --light-secondary-fixed: 208 230 243;
+    --light-on-secondary-fixed: 8 30 39;
+    --light-secondary-fixed-dim: 180 202 214;
+    --light-on-secondary-fixed-variant: 54 73 84;
+    --light-tertiary-fixed: 228 223 255;
+    --light-on-tertiary-fixed: 27 23 54;
+    --light-tertiary-fixed-dim: 199 194 234;
+    --light-on-tertiary-fixed-variant: 70 67 100;
+    --light-surface-dim: 214 218 222;
+    --light-surface-bright: 246 250 254;
+    --light-surface-container-lowest: 255 255 255;
+    --light-surface-container-low: 240 244 248;
+    --light-surface-container: 234 238 242;
+    --light-surface-container-high: 228 233 236;
+    --light-surface-container-highest: 223 227 231;
+
+    --dark-primary: 140 207 241;
+    --dark-surface-tint: 140 207 241;
+    --dark-on-primary: 0 53 71;
+    --dark-primary-container: 0 77 102;
+    --dark-on-primary-container: 192 232 255;
+    --dark-secondary: 180 202 214;
+    --dark-on-secondary: 31 51 61;
+    --dark-secondary-container: 54 73 84;
+    --dark-on-secondary-container: 208 230 243;
+    --dark-tertiary: 199 194 234;
+    --dark-on-tertiary: 48 45 76;
+    --dark-tertiary-container: 70 67 100;
+    --dark-on-tertiary-container: 228 223 255;
+    --dark-error: 255 180 171;
+    --dark-on-error: 105 0 5;
+    --dark-error-container: 147 0 10;
+    --dark-on-error-container: 255 218 214;
+    --dark-background: 15 20 23;
+    --dark-on-background: 223 227 231;
+    --dark-surface: 15 20 23;
+    --dark-on-surface: 223 227 231;
+    --dark-surface-variant: 64 72 76;
+    --dark-on-surface-variant: 192 199 205;
+    --dark-outline: 138 146 151;
+    --dark-outline-variant: 64 72 76;
+    --dark-shadow: 0 0 0;
+    --dark-scrim: 0 0 0;
+    --dark-inverse-surface: 223 227 231;
+    --dark-inverse-on-surface: 44 49 52;
+    --dark-inverse-primary: 21 102 131;
+    --dark-primary-fixed: 192 232 255;
+    --dark-on-primary-fixed: 0 31 43;
+    --dark-primary-fixed-dim: 140 207 241;
+    --dark-on-primary-fixed-variant: 0 77 102;
+    --dark-secondary-fixed: 208 230 243;
+    --dark-on-secondary-fixed: 8 30 39;
+    --dark-secondary-fixed-dim: 180 202 214;
+    --dark-on-secondary-fixed-variant: 54 73 84;
+    --dark-tertiary-fixed: 228 223 255;
+    --dark-on-tertiary-fixed: 27 23 54;
+    --dark-tertiary-fixed-dim: 199 194 234;
+    --dark-on-tertiary-fixed-variant: 70 67 100;
+    --dark-surface-dim: 15 20 23;
+    --dark-surface-bright: 53 58 61;
+    --dark-surface-container-lowest: 10 15 18;
+    --dark-surface-container-low: 23 28 31;
+    --dark-surface-container: 27 32 35;
+    --dark-surface-container-high: 38 43 46;
+    --dark-surface-container-highest: 48 53 57;
+  }
+
+  body {
+    transition: background-color .2s ease-in-out;
+  }
+}
