--- a/src/app/components/dropdown/dropdown.component.html
+++ b/src/app/components/dropdown/dropdown.component.html
@@ -1,6 +1,8 @@
-<div class="relative w-32">
+<div class="relative w-40">
   <div (click)="toggleDropdown()"
-    class="w-full flex items-center justify-between py-2 px-3 text-gray-700 font-semibold cursor-pointer rounded hover:bg-gray-100 md:hover:bg-transparent md:border-0 md:hover:text-light-primary md:p-0 md:w-auto dark:text-gray-400 dark:hover:text-white dark:focus:text-white dark:border-gray-700 dark:hover:bg-gray-700 md:dark:hover:bg-transparent">
+    class="w-full flex items-center justify-between py-2 px-3 text-gray-700 font-semibold cursor-pointer rounded
+     hover:bg-gray-100 md:hover:bg-transparent md:border-0 md:hover:text-light-primary md:p-0 md:w-auto 
+     dark:text-gray-400 dark:hover:text-white dark:focus:text-white dark:border-gray-700 dark:hover:bg-gray-700 md:dark:hover:bg-transparent">
     <span class="flex items-center gap-2 grow ">
       <app-translate-icon/>
       {{ selectedOption }}
@@ -17,7 +19,9 @@
       @for (option of options; track option) {
       <li>
         <a href="#" (click)="selectOption(option)"
-          class="block px-4 py-2 hover:bg-gray-100 dark:hover:bg-gray-600 dark:hover:text-white">{{ option }}</a>
+          class="block px-4 py-2 hover:bg-gray-100 dark:hover:bg-gray-600 dark:hover:text-white">
+          {{ option.label }}
+        </a>
       </li>
       } @empty {
       <li class="block px-4 py-2 text-gray-500">No options available</li>
