--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -8,18 +8,18 @@
     <div [ngClass]="{
         'hidden': !menuVisible,
         'bg-light-background dark:bg-dark-background': menuVisible,
-        'absolute top-0 left-0 w-full py-24': true,
+        'absolute top-0 left-0 w-full': true,
         'md:flex md:items-center md:static md:w-auto md:bg-transparent md:p-0': true
       }">
-      <ul class="flex flex-col md:flex-row justify-center items-center gap-8">
+      <ul class="flex flex-col md:flex-row justify-center items-center gap-8 h-svh md:h-auto ">
         <li>
-          <a href="/" class="nav-link">Home</a>
+          <a href="/" class="nav-link">{{translations.nav.home}}</a>
         </li>
         <li>
-          <a href="#projects" class="nav-link">Projects</a>
+          <a href="#projects" class="nav-link">{{translations.nav.projects}}</a>
         </li>
         <li>
-          <a href="#about" class="nav-link">About</a>
+          <a href="#about" class="nav-link">{{translations.nav.about}}</a>
         </li>
       </ul>
       <div id="nav-close" class="absolute top-6 right-6 text-3xl cursor-pointer md:hidden" (click)="toggleMenu()">
@@ -27,7 +27,9 @@
       </div>
     </div>
     <div class="flex flex-row items-center gap-6">
-      <app-dropdown [options]="['Español', 'Inglés']"></app-dropdown>
+
+      <app-dropdown [class.hidden]="menuVisible" [options]="languageOptions" [selectedLanguage]="selectedLanguage"  (optionSelected)="onLanguageSelected($event)"></app-dropdown>
+      
       <button type="button" (click)="cambiarTema()">
         @if(temaOscuro){
         <app-sun-icon className="w-6" strokeColor="#DCE3E9" />
