--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,12 +1,11 @@
 @defer{
-<app-header #header />
+<app-header (sectionSelected)="scrollToSection($event)" />
 <main class="flex flex-col justify-between items-center container m-auto px-4 lg:px-16">
   <app-hero id="hero"/>
   <app-projects id="projects"/>
   <app-about id="about" />
 </main>
 <router-outlet />
-<h1>Hello, {{title}}</h1>
 }@placeholder {
   <app-loading-placeholder message="Preparando para cargar datos..."/>
 }@loading {
