--- a/src/app/components/dropdown/dropdown.component.html
+++ b/src/app/components/dropdown/dropdown.component.html
@@ -18,7 +18,7 @@
     <ul class="py-2 text-sm text-gray-700 dark:text-gray-200" aria-labelledby="dropdownLargeButton">
       @for (option of options; track option) {
       <li>
-        <a href="#" (click)="selectOption(option)"
+        <a (click)="selectOption(option)"
           class="block px-4 py-2 hover:bg-gray-100 dark:hover:bg-gray-600 dark:hover:text-white">
           {{ option.label }}
         </a>
