--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -1,1 +1,19 @@
-<p>footer works!</p>
+<footer class=" mt-6 pt-8 pb-4 bg-light-surfaceContainerLow dark:bg-dark-surfaceContainerLow">
+    <div class="grid grid-cols-1 md:grid-cols-2 gap-6 justify-items-center container m-auto px-4">
+        <div class="max-w-md">
+            <h4 class="font-poppins font-bold text-3xl text-light-primary dark:text-dark-primary text-center md:text-left">Minkaspr</h4>
+            <p class="text-balance md:text-pretty text-center md:text-left">Gracias por visitar mi portafolio. Espero que encuentres mis proyectos interesantes y útiles.</p>
+        </div>
+        <div class="max-w-md flex flex-col gap-3">
+            <span class="text-lg font-semibold text-center md:text-left">Conéctate conmigo</span>
+            <div class="flex gap-6">
+                <a href="" class="text-light-onSurfaceVariant dark:text-dark-onSurfaceVariant hover:text-current hover:dark:text-current">LinkedIn</a>
+                <a href="" class="text-light-onSurfaceVariant dark:text-dark-onSurfaceVariant hover:text-current hover:dark:text-current">GitHub</a>
+                <a href="" class="text-light-onSurfaceVariant dark:text-dark-onSurfaceVariant hover:text-current hover:dark:text-current">Telegram</a>
+            </div>
+        </div>
+        <div class="md:col-start-1 md:col-end-3 ">
+            <p class="text-center">Copyright © 2024 | Todos los derechos reservados.</p>
+        </div>
+    </div>
+</footer>
