--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,12 +4,11 @@
   <app-hero id="hero"/>
   <app-projects id="projects"/>
   <app-about id="about" />
-  <img src="https://i.pinimg.com/736x/bd/54/d3/bd54d30f363f9a3a9f88ef67504ac73b.jpg" alt="fondo"/>
 </main>
-<router-outlet />
+<app-footer />
+<!--<router-outlet />-->
 }@placeholder {
   <app-loading-placeholder message="Preparando para cargar datos..."/>
 }@loading {
   <app-loading-placeholder message="Cargando datos..."/>
 }
-<!---https://demo3565171.mockable.io/portfolio/projects-->
