--- a/src/app/components/about/about.component.html
+++ b/src/app/components/about/about.component.html
@@ -1,1 +1,147 @@
-<p>about works!</p>
+<section class="my-6">
+  @let translations = translations$ | async;
+  @let darkTheme = darkTheme$ | async;
+  <h2 class="text-3xl font-bold text-center">{{ translations.aboutUs.title }}</h2>
+  <div class="mt-4 flex gap-12 flex-col md:flex-row">
+    <div class="flex-1 flex flex-col gap-6">
+      <div class="flex flex-col gap-2">
+        <h3 class="text-2xl font-semibold inline-flex items-center">
+          <div class="bg-light-surfaceContainerLow dark:bg-dark-surfaceContainerLow  
+          text-light-primary dark:text-dark-primary text-xs font-medium me-2 px-1.5 py-1.5 rounded-lg">
+            <app-user-icon />
+          </div>
+          ¿Quién Soy?
+        </h3>
+        <p class="tracking-wide text-pretty">
+          Soy un entusiasta del desarrollo de software,siempre buscando crear soluciones innovadoras para
+          situaciones prácticas.
+          He trabajado en el desarrollo de aplicaciones web y móviles, participando en todas las fases del
+          proyecto, desde la planificación hasta la implementación. Me interesa todo el proceso de desarrollo de
+          software, asegurando que las aplicaciones no solo resuelvan problemas, sino que también ofrezcan una
+          excelente experiencia al usuario.
+        </p>
+      </div>
+      <div class="flex flex-col gap-2">
+        <h3 class="text-2xl font-semibold inline-flex items-center">
+          <div class="bg-light-surfaceContainerLow dark:bg-dark-surfaceContainerLow  
+          text-light-primary dark:text-dark-primary text-xs font-medium me-2 px-1.5 py-1.5 rounded-lg">
+            <app-affiliate-icon />
+          </div>
+          ¿Cómo Trabajo?
+        </h3>
+        <p class="tracking-wide text-pretty">
+          Valoro el trabajo en equipo y creo que la comunicación y el compromiso son esenciales para el éxito. Me
+          gusta colaborar con otros desarrolladores y recibir retroalimentación para mejorar continuamente. En mi
+          tiempo libre, disfruto escuchando música y explorando nuevas tecnologías a través de videos y
+          tutoriales.
+        </p>
+      </div>
+      <div class="flex flex-col gap-2">
+        <h3 class="text-2xl font-semibold inline-flex items-center">
+          <div class="bg-light-surfaceContainerLow dark:bg-dark-surfaceContainerLow  
+          text-light-primary dark:text-dark-primary text-xs font-medium me-2 px-1.5 py-1.5 rounded-lg">
+            <app-at-icon />
+          </div>
+          Mi Nickname
+        </h3>
+        <p class="tracking-wide text-balance ">
+          Mi nick, <span class="font-medium">Minkasper</span>, es un acrónimo que rinde homenaje a mis queridas
+          mascotas,
+          <span class="inline-flex items-center align-bottom gap-2"><app-fish-icon className="w-6" /> min</span> y
+          <span class="inline-flex items-center align-bottom gap-2"><app-bone-icon className="w-5" />
+            kasper</span>
+        </p>
+      </div>
+    </div>
+    <div class="flex-1">
+      <h3 class="text-2xl font-semibold">Habilidades Profesionales</h3>
+      <span class="
+            bg-light-surfaceContainerLow dark:bg-dark-surfaceContainerLow  
+            text-light-primary dark:text-dark-primary text-xs font-medium me-2 px-3 py-1 rounded-lg ">
+        Desarrollo Web
+      </span>
+      <span class="
+            bg-light-surfaceContainerLow dark:bg-dark-surfaceContainerLow  
+            text-light-primary dark:text-dark-primary text-xs font-medium me-2 px-3 py-1 rounded-lg ">
+        Desarrollo Android
+      </span>
+      <ul class="flex flex-col gap-4 mt-4">
+        <li class="flex flex-row gap-4 items-center">
+          <div
+            class="flex-none w-16 h-16 flex justify-center items-center bg-light-surfaceContainer dark:bg-dark-surfaceContainer rounded-lg">
+            <app-code-icon className="w-8 h-8" [strokeColor]="darkTheme ? '#417386' : '#023042'" />
+          </div>
+          <div class="grow flex flex-col gap-1">
+            <h4 class="text-xl font-semibold">Lenguajes de Programación</h4>
+            <p class="text-[#023042] dark:text-dark-onSurfaceVariant font-medium">Java, PHP, JavaScript,
+              TypeScript</p>
+          </div>
+        </li>
+        <li class="flex flex-row gap-4 items-center">
+          <div
+            class="flex-none w-16 h-16 flex justify-center items-center bg-light-surfaceContainer dark:bg-dark-surfaceContainer rounded-lg">
+            <app-framework-icon className="w-8 h-8" [strokeColor]="darkTheme ? '#417386' : '#023042'" />
+          </div>
+          <div class="grow flex flex-col gap-1">
+            <h4 class="text-xl font-semibold">Frameworks</h4>
+            <p class="text-[#023042] dark:text-dark-onSurfaceVariant font-medium text-balance">Angular (Front-end),
+              Spring Boot (Back-end), Tailwind, Bootstrap</p>
+          </div>
+        </li>
+        <li class="flex flex-row gap-4 items-center">
+          <div
+            class="flex-none w-16 h-16 flex justify-center items-center bg-light-surfaceContainer dark:bg-dark-surfaceContainer rounded-lg">
+            <app-database-icon className="w-8 h-8" [strokeColor]="darkTheme ? '#417386' : '#023042'" />
+          </div>
+          <div class="grow flex flex-col gap-1">
+            <h4 class="text-xl font-semibold">Bases de Datos</h4>
+            <p class="text-[#023042] dark:text-dark-onSurfaceVariant font-medium">MySQL, SQLite</p>
+          </div>
+
+        </li>
+        <li class="flex flex-row gap-4 items-center">
+          <div
+            class="flex-none w-16 h-16 flex justify-center items-center bg-light-surfaceContainer dark:bg-dark-surfaceContainer rounded-lg">
+            <app-dev-tools-icon className="w-8 h-8" [strokeColor]="darkTheme ? '#417386' : '#023042'" />
+          </div>
+          <div class="grow flex flex-col gap-1">
+            <h4 class="text-xl font-semibold">Herramientas de Desarrollo</h4>
+            <p class="text-[#023042] dark:text-dark-onSurfaceVariant font-medium">VSCode, Netbeans, IntelliJ
+              IDEA, Android Studio, IDX</p>
+          </div>
+        </li>
+        <li class="flex flex-row gap-4 items-center">
+          <div
+            class="flex-none w-16 h-16 flex justify-center items-center bg-light-surfaceContainer dark:bg-dark-surfaceContainer rounded-lg">
+            <app-project-management-icon className="w-8 h-8" [strokeColor]="darkTheme ? '#417386' : '#023042'" />
+          </div>
+          <div class="grow flex flex-col gap-1">
+            <h4 class="text-xl font-semibold">Gestión de Proyectos</h4>
+            <p class="text-[#023042] dark:text-dark-onSurfaceVariant font-medium">Scrum, Kanban</p>
+          </div>
+        </li>
+        <li class="flex flex-row gap-4 items-center">
+          <div
+            class="flex-none w-16 h-16 flex justify-center items-center bg-light-surfaceContainer dark:bg-dark-surfaceContainer rounded-lg">
+            <app-work-tools-icon className="w-8 h-8" [strokeColor]="darkTheme ? '#417386' : '#023042'" />
+          </div>
+          <div class="grow flex flex-col gap-1">
+            <h4 class="text-xl font-semibold">Otras Herramientas</h4>
+            <p class="text-[#023042] dark:text-dark-onSurfaceVariant font-medium">Microsoft Project, Bizagi,
+              Git, GitHub, Jira</p>
+          </div>
+        </li>
+        <li class="flex flex-row gap-4 items-center">
+          <div
+            class="flex-none w-16 h-16 flex justify-center items-center bg-light-surfaceContainer dark:bg-dark-surfaceContainer rounded-lg">
+            <app-prototyping-icon className="w-8 h-8" [strokeColor]="darkTheme ? '#417386' : '#023042'" />
+          </div>
+          <div class="grow flex flex-col gap-1">
+            <h4 class="text-xl font-semibold">Prototipado</h4>
+            <p class="text-[#023042] dark:text-dark-onSurfaceVariant font-medium">Figma</p>
+          </div>
+        </li>
+      </ul>
+    </div>
+  </div>
+</section>
