--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -6,7 +6,7 @@
       } @else {
       <app-folder-light-icon className="h-7" fillColor="#156683" id="logo-light" />
       }
-      <span class="font-poppins font-bold text-lg text-light-primary dark:text-dark-primary">Minkaspr</span>
+      <span class="font-poppins font-bold text-lg text-light-primary dark:text-dark-primary">{{ translations.brand }}</span>
     </div>
     <div [ngClass]="{
         'hidden': !visibleMenu,
