--- a/src/app/components/card/card.component.html
+++ b/src/app/components/card/card.component.html
@@ -4,15 +4,18 @@
     flex flex-col gap-5 h-full
     bg-light-surfaceContainerLow dark:bg-dark-surfaceContainerLow 
     drop-shadow-md hover:drop-shadow-[0_6px_8px_rgba(21,102,131,0.4)] dark:hover:drop-shadow-[0_6px_8px_rgba(223,243,250,0.25)]">
-  <div class="box-border rounded-lg overflow-hidden ">
-    <img class="group-hover:scale-110 transition-transform" [src]="project.imageUrl" [alt]="project.title" draggable="false"/>
-  </div>
-  <div class="flex flex-col justify-between gap-5">
-    <div class="flex flex-col gap-2">
-      <h3 class="text-lg font-semibold font-poppins">{{ project.title }}</h3>
-      <p
-        class="text-base line-clamp-4 text-pretty md:line-clamp-4 text-light-onSurfaceVariant dark:text-dark-onSurfaceVariant">
-        {{ project.description }}</p>
+  <div class="flex flex-col justify-between h-full gap-6">
+    <div class="flex flex-col gap-6">
+      <div class="box-border rounded-lg overflow-hidden ">
+        <img class="group-hover:scale-110 transition-transform" [src]="project.imageUrl" [alt]="project.title"
+          draggable="false" />
+      </div>
+      <div class="flex flex-col gap-2">
+        <h3 class="text-lg font-semibold font-poppins">{{ project.title }}</h3>
+        <p
+          class="text-base line-clamp-4 text-pretty md:line-clamp-4 text-light-onSurfaceVariant dark:text-dark-onSurfaceVariant">
+          {{ project.description }}</p>
+      </div>
     </div>
     <div class="flex flex-col sm:flex-row items-center justify-between gap-5 sm:gap-0 ">
       @let translations = translations$ | async;
@@ -38,8 +41,7 @@
         </span>
         }
       </div>
-      <a [href]="project.detailsUrl" target="_blank"
-        class="flex rounded-lg gap-1 font-medium text-ligh-secondary dark:text-dark-secondary transition
+      <a [href]="project.detailsUrl" target="_blank" class="flex rounded-lg gap-1 font-medium text-ligh-secondary dark:text-dark-secondary transition
         hover:bg-light-secondaryContainer hover:dark:bg-dark-secondaryContainer px-4 py-2">
         {{ translations?.projects.cards.details }}
         <app-arrow-up-right-icon className="size-6" />
