--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,9 +1,11 @@
 @defer{
-<app-header (sectionSelected)="scrollToSection($event)" />
+<app-header (sectionSelected)="scrollToSection($event)" [activeSection]="activeSection"/>
 <main class="flex flex-col justify-between items-center container m-auto px-4 lg:px-16">
-  <app-hero id="hero"/>
-  <app-projects id="projects"/>
-  <app-about id="about" />
+  <section id="hero">
+    <app-hero />
+  </section>
+  <app-projects [sectionId]="'projects'"/>
+  <app-about/>
 </main>
 <app-footer />
 <!--<router-outlet />-->
