--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -15,7 +15,7 @@
         'md:flex md:items-center md:static md:w-auto md:bg-transparent md:p-0': true
       }">
       @defer(when !isLoading){
-      <ul class="flex flex-col md:flex-row justify-center items-center gap-8 h-svh md:h-auto ">
+      <ul class="flex flex-col md:flex-row justify-center items-center gap-8 h-dvh md:h-auto ">
         <li>
           <a 
             (click)="onSectionSelect('hero')" 
