--- a/src/app/components/projects/projects.component.html
+++ b/src/app/components/projects/projects.component.html
@@ -1,6 +1,6 @@
-<section class="my-6 flex flex-col justify-center items-center">
+<section [id]="sectionId" class="my-6 flex flex-col justify-center items-center">
   <h2 class="text-3xl font-bold text-center">{{ translations.projects.title }}</h2>
-  <div class="py-8 grid gap-6 grid-cols-1 lg:grid-cols-2 2xl:grid-cols-3 auto-rows-fr">
+  <div class="py-8 grid gap-6 grid-cols-1 md:grid-cols-2 2xl:grid-cols-3 auto-rows-fr">
     @for (project of displayedProjects; track project.id) {
     <app-card [project]="project"></app-card>
     } @empty {
